# revel

./: .gitignore  LICENSE  bits.py  blob.py  data.py  decon.py  egraph.py  enumerate.py  lang.py  main.py  nlist.py  q.py  readme.md  readme.org  referee.py  requirements.txt  robots.txt  roll.py  rollbrush.py  λ.py
babble-this/: Cargo.toml
babble-this/src/: main.rs
examples/: blob.py  genomes.py  iter.py
render/: cons.py  draw.py  font.py  roll.py
tunes/: barry-harris.mid
